package cardoso.carlos.keeper.users;

import lombok.Getter;
import org.springframework.util.Assert;

@Getter
public class Manager extends User {
    private final ManagerId id;

    public Manager(ManagerId id, String name, CPF cpf, Email email) {
        super(name, cpf, email);
        Assert.notNull(id, "Manager ID must not be null");
        this.id = id;
    }
}
